[package]
name = "tomato-novel-network-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
bytes = "1"
http = "1"
