[package]
name = "tomato-novel-network-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib", "rlib"]

[features]
default = []
charles_proxy = []
full_api = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
bytes = "1"
http = "1"
serde_json = "1"
once_cell = "1.19"
base64 = "0.22"
serde_urlencoded = "0.7"
